2009-10-21  Darren Kenny  <darren.kenny@sun.com>

	* SUNWnwam-manager.spec, nwam-manager.spec:
	  Updated for 0.99.94, with some merges from spec-files/trunk version.

2009-10-21  Darren Kenny  <darren.kenny@sun.com>

	* configure.in:
	  Bump to 0.99.94 - for RC4
	* nwam_core/lib/i386/libnwam.so.1, nwam_core/lib/sparc/libnwam.so.1:
	  Update to RC4 libs.

2009-10-20  Darren Kenny  <darren.kenny@sun.com>

	* docs/manpages/man1m/nwam-manager-properties.1m,
	  docs/manpages/man1m/nwam-manager.1m:
	  Add manpages, which later should be added to
	  spec-files/manpages/man1m.

2009-10-19  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_env_pref_dialog.c: 
	  Allow empty strings and IPv6 addresses for server entries to allow
	  for cancelling. Validate servers on apply, to catch empty strings.
	  Also check that the default domain is supplied if required.
	  This is a fix for defect#12033.

2009-10-19  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Set the default route entry's sensitivity based on whether the
	  object is modifiable or not.
	* common/libnwamui.c, common/libnwamui.h:
	  Add function nwamui_util_ask_about_dup_obj() to show a message
	  dialog saying that rename isn't possible, so ask for duplication.
	* capplet/nwam_location_dialog.c:
	  Fix defect#12031 where renaming of a location should prompt for
	  duplication if not possible to rename (as per UI spec).

2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_location_dialog.c: 
	  Fix defect#12030 where the rename button was being enabled for
	  SYSTEM Locations.

2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncu.c, common/nwamui_ncu.h,
	  ui/nwam-manager-properties.ui, capplet/nwam_conn_conf_ip_panel.c: 
	  Fix defect#11975 - add ipv4/6 default route properties to NCUs, and
	  add ip4/6 default route configuration entry to IP panel.
	* ui/nwam-manager-wireless.ui, capplet/nwam_wireless_chooser.c: 